2.11.12
 - enh: make auto-apply in QuickView plot settings optional
2.11.11
 - enh: strip http(s):// from DCOR server string in settings
 - enh: improve GUI of QuickView (#133, #43)
 - setup: bump dclab from 0.47.0 to 0.47.2
2.11.10
 - fix: detect chaged files on disk when reloading metadata
 - setup: bump dclab from 0.46.4 to 0.47.0 (new bg_med feature
   and other convenience methods)
2.11.9
 - fix: include logs when exporting data (#126)
 - setup: bump dclab from 0.46.2 to 0.46.4 (new features)
2.11.8
 - setup: bump dclab from 0.45.0 to 0.46.2 (#132)
 - build: pin pyinstaller version to 5.3
 - ref: use `hashobj` from upstream dclab (#132)
2.11.7
 - build: fix build pipelines
2.11.6
 - setup: bump dclab from 0.43.0 to 0.45.0 (scalar feature support)
2.11.5
 - build: use InnoSetup "autopf" feature for installation directory
2.11.4
 - enh: preselect only innate features in data export
   to reduce computation time
 - docs: minor improvements
 - setup: bump dclab from 0.42.2 to 0.43.0 (improved compression)
 - setup: include zstandard library in distribution installer
2.11.3
 - setup: bump dclab from 0.42.1 to 0.42.2 (lazy-load .rtdc data
   which increases initial opening times)
 - setup: bump pyqtgraph from 0.12.3 to 0.12.4
2.11.2
 - setup: bump dclab from 0.42.0 to 0.42.1 (support background
   image access from DCOR)
2.11.1
 - fix: allow to specify 0.5 increments when filtering integer
   features (#123)
 - setup: bump dclab from 0.41.0 to 0.42.0
2.11.0
 - feat: allow to load encrypted dcor access tokens (#122)
 - setup: bump dclab from 0.39.17 to 0.41.0
 - setup: bump scipy to 1.8.0
 - build: bump Python version to 3.9
2.10.0
 - feat: export filter ray for each dataset via shortcut (#119)
 - setup: bump dclab from 0.39.15 to 0.39.17 (#118)
2.9.6
 - fix: extensions not loaded during startup on Windows (#117)
2.9.5
 - fix: polygon translation via drag-n-drop in polygon edit mode
   was not taken into account (#115)